# scan_to_bim_pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_pcl.sh  chmode.sh  conda_requirements.txt  requirements.txt  requirements_simple.txt
data_to_format/: data_to_format.py  pdal_dtm.sh
doc/: SAD.uml  SAD.~ml
docker/: Readme.txt  docker_ml_gpu.sh  docker_ml_open3d_data_debug.sh  docker_ml_open3d_debug.sh
docker/build_docker_open3d/: Dockerfile  build_docker.sh  load_docker.sh  remove_docker_image.sh  save_docker.sh
docker/program/: pcd_ml_dataset.py
dtm_to_geo/: dtm_to_geo.py
geo_to_bim_indoor/: geo_to_bim_indoor.py
geo_to_bim_outdoor/: geo_to_bim_outdoor.py
input/: sample_scan_to_bim.json
input/conferenceRoom1/: conferenceRoom1_scan_to_bim.json
input/conference_room1/: conference_room1_scan_to_bim.json
input/punktsky/: punktsky_scan_to_bim.json
lib/: scan_to_bim_lib.py  util.py
output/: data_to_format_pdal.json
output/dtm_to_geo/: dtm_to_geo.dbf  dtm_to_geo.geojson  dtm_to_geo.ply  dtm_to_geo.shp  dtm_to_geo_dimension.csv  dtm_to_geo_projection.txt  dtm_to_geo_transform.json
pcd_clean/: pcd_to_clean.py
pcd_density/: pcd_density.cpp
pcd_to_bbox/: pcd_to_bbox.py  revit_family_types.json
pcd_to_dtm/: pcd_to_dtm.py
pcd_to_seg/: pcd_to_seg.cpp
pcd_to_seg_ml/: check_gpu.py  debug_train.sh  link_train_data_from_media.sh  mount_train_data_from_media.sh  pcd_to_seg_ml.py  run_tensorboard.sh  run_train_pipeline.sh  train_own_pcd.py  train_pcd_on_torch.py  update_pcd_normal.py
pcd_to_seg_ml/configs/: randlanet_s3dis copy.yml  randlanet_s3dis.yml
pipeline/: app.py  config.json  config.py  pcd_to_dtm_pipeline.json  pipeline.py  pipeline_default_stage.py  scan_to_bim.sh
seg_to_geo/: seg_to_geo.cpp
seg_to_geo_ml/: merge_csv.py  seg_to_geo_config.json
